hphp/hack/test/typecheck/argument_unpacking/unpack_call1.php.exp
File "unpack_call1.php", line 85, characters 8-19:
Invalid argument (Typing[4110])
  File "unpack_call1.php", line 85, characters 8-19:
  Expected `Traversable<_>` (it is unpacked with `...`)
  File "unpack_call1.php", line 90, characters 24-28:
  But got `mixed`
File "unpack_call1.php", line 87, characters 8-14:
Invalid argument (Typing[4110])
  File "unpack_call1.php", line 87, characters 8-14:
  Expected `Traversable<_>` (it is unpacked with `...`)
  File "unpack_call1.php", line 90, characters 24-28:
  But got `mixed`
File "unpack_call1.php", line 38, characters 8-12:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 38, characters 8-12:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 39, characters 21-25:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 39, characters 21-25:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 8, characters 19-29:
  Definition is here
File "unpack_call1.php", line 40, characters 15-19:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 40, characters 15-19:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 12, characters 19-19:
  Definition is here
File "unpack_call1.php", line 41, characters 21-25:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 41, characters 21-25:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 16, characters 19-29:
  Definition is here
File "unpack_call1.php", line 42, characters 15-19:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 42, characters 15-19:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 12, characters 19-19:
  Definition is here
File "unpack_call1.php", line 51, characters 8-22:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 51, characters 8-22:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 53, characters 8-14:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 53, characters 8-14:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 69, characters 8-12:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 69, characters 8-12:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 75, characters 8-12:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 75, characters 8-12:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 85, characters 8-19:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 85, characters 8-19:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
File "unpack_call1.php", line 87, characters 8-14:
Invalid argument (Typing[4359])
  File "unpack_call1.php", line 87, characters 8-14:
  An array cannot be unpacked into the required arguments of a function
  File "unpack_call1.php", line 3, characters 10-10:
  Definition is here
